fixed background image url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="hero position-relative" aria-roledescription="carousel"
-        style="opacity: 1; background-image: url(&quot;/builds/production/images/bg/bg-2.jpg&quot;); background-size: cover;">
+        style="opacity: 1; background-image: url(&quot;/images/bg/bg-2.jpg&quot;); background-size: cover;">
 
         <div class="wrapper">
             <div class="cf">
@@ -81,10 +81,10 @@
                 var hero = document.getElementsByClassName("hero");
                 hero[0].style.opacity = "1";
                 if (window.innerWidth < 600) {
-                    hero[0].style.backgroundImage = "url('/builds/production/images/bg/bg-mobile-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('/images/bg/bg-mobile-" + a + ".jpg')";
 
                 } else {
-                    hero[0].style.backgroundImage = "url('/builds/production/images/bg/bg-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('/images/bg/bg-" + a + ".jpg')";
                 }
             }, 250);
             var circle_icons = document.getElementsByClassName("circle-icons");
