--- a/index.html
+++ b/index.html
@@ -49,12 +49,17 @@
                         <span class="circle-icons"></span>
                     </a>
                 </li>
+                <li data-slide="4" onclick="hero_bg_fn(this,4)">
+                    <a>
+                        <span class="circle-icons"></span>
+                    </a>
+                </li>
             </ul>
         </div>
     </section>
     <script>
         current_bg = 1;
-        max_images = 3;
+        max_images = 4;
         function hero_bg_fn(e, a, next) {
             if (a == -1) {
                 if (next == "next") {
@@ -112,6 +117,13 @@
                         h2_sub_text[0].innerText = "Providing a Free Prescription Delivery service to your home";
                         //h1_strong_heading[0].innerText = "";
                         h1_heading_text[0].innerHTML = "Free Prescription<br> <strong class='h1-strong-heading'>Delivery</strong>";
+                    } else if (i == 3) {
+                        //hero[0].style.backgroundPositionY = "73%";
+                        //hero[0].style.backgroundPositionX = "68%";
+                        //hero[0].style.backgroundSize = "71%";
+                        h2_sub_text[0].innerText = "WE ARE COMMITTED TO PROVIDING SAFE HEALTH SERVICES TO OUR CUSTOMERS AND EMPLOYEES.";
+                        //h1_strong_heading[0].innerText = "";
+                        h1_heading_text[0].innerHTML = "OUR <br> <strong class='h1-strong-heading'>COVID</strong> RESPONSE.";
                     }
                 }
                 current_bg = a;
