--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 var hero = document.getElementsByClassName("hero");
                 hero[0].style.opacity = "1";
                 if (window.innerWidth < 600) {
-                    hero[0].style.backgroundImage = "url('/images/bg/bg-mobile-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('C:/Users/Fahad Faisal Tejani/Desktop/Dom experimentation/domexperimentation.github.io/images/bg/bg-mobile-" + a + ".jpg')";
 
                 } else {
-                    hero[0].style.backgroundImage = "url('/images/bg/bg-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('C:/Users/Fahad Faisal Tejani/Desktop/Dom experimentation/domexperimentation.github.io/images/bg/bg-" + a + ".jpg')";
                 }
             }, 250);
             var circle_icons = document.getElementsByClassName("circle-icons");
@@ -123,7 +123,7 @@
                         //hero[0].style.backgroundSize = "71%";
                         h2_sub_text[0].innerText = "WE ARE COMMITTED TO PROVIDING SAFE HEALTH SERVICES TO OUR CUSTOMERS AND EMPLOYEES.";
                         //h1_strong_heading[0].innerText = "";
-                        h1_heading_text[0].innerHTML = "OUR <br> <strong class='h1-strong-heading'>COVID</strong> RESPONSE.";
+                        h1_heading_text[0].innerHTML = "<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>OUR <br> <strong class='h1-strong-heading'>COVID</strong> RESPONSE.</a>";
                     }
                 }
                 current_bg = a;
