changing image urls

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 var hero = document.getElementsByClassName("hero");
                 hero[0].style.opacity = "1";
                 if (window.innerWidth < 600) {
-                    hero[0].style.backgroundImage = "url('C:/Users/Fahad Faisal Tejani/Desktop/Dom experimentation/domexperimentation.github.io/images/bg/bg-mobile-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('./images/bg/bg-mobile-" + a + ".jpg')";
 
                 } else {
-                    hero[0].style.backgroundImage = "url('C:/Users/Fahad Faisal Tejani/Desktop/Dom experimentation/domexperimentation.github.io/images/bg/bg-" + a + ".jpg')";
+                    hero[0].style.backgroundImage = "url('./images/bg/bg-" + a + ".jpg')";
                 }
             }, 250);
             var circle_icons = document.getElementsByClassName("circle-icons");
