--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body style="background-color: royalblue;">
     <section class="hero position-relative" aria-roledescription="carousel"
         style="opacity: 1; background-image: url(&quot;/images/bg/bg-2.jpg&quot;); background-size: cover;">
 
         <div class="wrapper">
             <div class="cf">
-                <div class="span-3-of-4-tablet">
+                <div class="span-3-of-4-tablet" style="background-color: royalblue;">
                     <h1 class="thin h1-heading-text">Free Prescription<br> <strong
                             class="h1-strong-heading">Delivery</strong></h1>
                     <h2 class="h2-sub-text">Providing a Free Prescription Delivery service to your home</h2>
