--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
                     if (i == 0) {
                         //hero[0].style.backgroundSize = "cover";
                         //hero[0].style.backgroundPositionY = "1%";
-                        h2_sub_text[0].innerText = "Providing an in-home Medication Management Service";
+                        h2_sub_text[0].innerText = "<span style='background-color: rgba(255,255,255,0.5);'>Providing an in-home Medication Management Service</span>";
                         //h1_strong_heading[0].innerText = "";
-                        h1_heading_text[0].innerHTML = "HealthPlus<br> <strong class='h1-strong-heading'>HomeCare</strong> Program";
+                        h1_heading_text[0].innerHTML = "<span style='background-color: rgba(255,255,255,0.5);'>HealthPlus</span><br> <strong class='h1-strong-heading'><span style='background-color: rgba(255,255,255,0.5);'>HomeCare</span></strong> <span style='background-color: rgba(255,255,255,0.5);'>Program</span>";
                     } else if (i == 2) {
                         //hero[0].style.backgroundPositionY = "73%";
                         hero[0].style.backgroundSize = "cover";
-                        h2_sub_text[0].innerText = "Call us to book an appointment";
-                        h1_heading_text[0].innerHTML = "Get your <strong>Flu Shot</strong>";
+                        h2_sub_text[0].innerText = "<span style='background-color: rgba(255,255,255,0.5);'>Protect yourself. Flu vaccines help. Please contact our injection-certified Healthcare professionals to book appointment.</span>";
+                        h1_heading_text[0].innerHTML = "<span style='background-color: rgba(255,255,255,0.5);'>Travel Vaccinations &amp <strong>Flu Shots</strong></span>";
                     } else if (i == 1) {
                         //hero[0].style.backgroundPositionY = "73%";
                         //hero[0].style.backgroundPositionX = "68%";
                         //hero[0].style.backgroundSize = "71%";
-                        h2_sub_text[0].innerText = "Providing a Free Prescription Delivery service to your home";
+                        h2_sub_text[0].innerText = "<span style='background-color: rgba(255,255,255,0.5);'>Providing a Free Prescription Delivery service to your home</span>";
                         //h1_strong_heading[0].innerText = "";
-                        h1_heading_text[0].innerHTML = "Free Prescription<br> <strong class='h1-strong-heading'>Delivery</strong>";
+                        h1_heading_text[0].innerHTML = "<span style='background-color: rgba(255,255,255,0.5);'>Free Prescription</span><br> <strong class='h1-strong-heading'><span style='background-color: rgba(255,255,255,0.5);'>Delivery</span></strong>";
                     } else if (i == 3) {
                         //hero[0].style.backgroundPositionY = "73%";
                         //hero[0].style.backgroundPositionX = "68%";
                         //hero[0].style.backgroundSize = "71%";
-                        h2_sub_text[0].innerText = "WE ARE COMMITTED TO PROVIDING SAFE HEALTH SERVICES TO OUR CUSTOMERS AND EMPLOYEES.";
+                        h2_sub_text[0].innerText = "<span style='background-color: rgba(255,255,255,0.5);'>WE ARE COMMITTED TO PROVIDING SAFE HEALTH SERVICES TO OUR CUSTOMERS AND EMPLOYEES.</span>";
                         //h1_strong_heading[0].innerText = "";
-                        h1_heading_text[0].innerHTML = "<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>OUR <br> <strong class='h1-strong-heading'>COVID</strong> RESPONSE.</a>";
+                        h1_heading_text[0].innerHTML = "<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'><span style='background-color: rgba(255,255,255,0.5);'>OUR </span><br> <strong class='h1-strong-heading'><span style='background-color: rgba(255,255,255,0.5);'>COVID</span></strong> <span style='background-color: rgba(255,255,255,0.5);'>RESPONSE.</span></a>";
                     }
                 }
                 current_bg = a;
